--- a/source/sass/c_local/10_layout/_layout.sass
+++ b/source/sass/c_local/10_layout/_layout.sass
@@ -282,10 +282,9 @@ main, #feature-tier-1
   +bp($stack)
     background-color: $black
     height: 100%
-    width: 100%
+    width: 93%
     margin: 0
     font-size: inherit
-    min-width: 100%
     max-width: 100%
          
     img
